--- a/style.css
+++ b/style.css
@@ -680,7 +680,7 @@ body.scrolled .appstore-floater { opacity: 0; transform: translate(-50%, 16px); 
   font-weight: 900;
   line-height: 1.1;
   letter-spacing: -0.02em;
-  margin: 0 0 16px 0;
+  margin: 32px 0 16px 0;
   color: var(--text);
 }
 
@@ -699,4 +699,15 @@ body.scrolled .appstore-floater { opacity: 0; transform: translate(-50%, 16px); 
   margin-left: calc(-1 * clamp(24px, 6.5vw, 96px));
   margin-right: calc(-1 * clamp(24px, 6.5vw, 96px));
   border-radius: 0;
+}
+
+/* Mobile: full viewport width images for articles */
+@media (max-width: 1023px) {
+  .article-page .article-hero img,
+  .article-page .article-figure img {
+    width: 100vw;
+    max-width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    margin-right: calc(-50vw + 50%);
+  }
 }
